# VisionGuard

./: .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist  LICENSE.md  LISCENSE.md  NOTICE  README.md  VisionGuardInstaller.nsi  build.ps1  build.sh  conanfile.py  config.json  run.ps1  run.sh  screen_time_stats.json  tempCodeRunnerFile.sh
backend/: CMakeLists.txt
backend/gaze_estimation/cpp/: gaze_estimation_demo.hpp  main.cpp
backend/gaze_estimation/cpp/include/: results_marker.hpp
backend/gaze_estimation/cpp/src/: face_inference_results.cpp  ie_wrapper.cpp  landmarks_estimator.cpp  results_marker.cpp
docs/: ARCHITECTURE.md  BENCHMARKING.md  BLOG_DRAFT.md  BLOG_DRAFT_2.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  FEATURES.md  FINAL_BLOG.md  GSoC_2024_VisionGuard_Final_Report.md  GSoC_24_final_submission.md  INSTALLATION.md  USAGE.md  benchmark_plot.ipynb  calibration_diagram.ipynb  index.html
docs/images/: embed_svg_hl_diag.html
include/: constants.hpp  mainwindow.h  mainwindow.hpp  results_marker.hpp  vision_guard.hpp
models/intel/face-detection-adas-0001/FP16-INT8/: face-detection-adas-0001.xml
models/intel/face-detection-retail-0004/FP16-INT8/: face-detection-retail-0004.xml
models/intel/facial-landmarks-35-adas-0002/FP16/: facial-landmarks-35-adas-0002.xml
models/intel/facial-landmarks-35-adas-0002/FP32/: facial-landmarks-35-adas-0002.xml
models/intel/facial-landmarks-98-detection-0001/FP16/: facial-landmarks-98-detection-0001.xml
models/intel/gaze-estimation-adas-0002/FP16/: gaze-estimation-adas-0002.xml
models/intel/gaze-estimation-adas-0002/FP16-INT8/: gaze-estimation-adas-0002.xml
omz_models/face-detection-adas-0001/FP16/: face-detection-adas-0001.xml
omz_models/face-detection-adas-0001/FP32/: face-detection-adas-0001.xml
omz_models/face-detection-retail-0004/FP16/: face-detection-retail-0004.xml
omz_models/face-detection-retail-0004/FP32/: face-detection-retail-0004.xml
omz_models/face-detection-retail-0005/FP16/: face-detection-retail-0005.xml
omz_models/face-detection-retail-0005/FP16-INT8/: face-detection-retail-0005.xml
omz_models/face-detection-retail-0005/FP32/: face-detection-retail-0005.xml
omz_models/facial-landmarks-35-adas-0002/FP16-INT8/: facial-landmarks-35-adas-0002.xml
omz_models/facial-landmarks-98-detection-0001/FP16-INT8/: facial-landmarks-98-detection-0001.xml
omz_models/facial-landmarks-98-detection-0001/FP32/: facial-landmarks-98-detection-0001.xml
omz_models/head-pose-estimation-adas-0001/FP32/: head-pose-estimation-adas-0001.xml
omz_models/open-closed-eye-0001/FP16/: open-closed-eye-0001.xml
omz_models/open-closed-eye-0001/FP32/: open-closed-eye-0001.xml
resources/: resources.qrc  vision-guard-removebg.icns  windows_resource.rc
src/: gaze_estimator.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  vision_guard.cpp
src/app/: constants.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc
src/backend/vision_guard_core/: CMakeLists.txt  VisionGuard.cpp  VisionGuard.hpp  head_pose_estimator.hpp  main.cpp  old_main.cpp  results_marker.cpp  results_marker.hpp  utils.hpp  vision_guard.hpp
src/backend/vision_guard_core/break_notification_system/: break_notification_system.hpp
src/backend/vision_guard_core/break_notification_system/include/: break_notification_system.hpp
src/backend/vision_guard_core/break_notification_system/src/: break_notification_system.cpp
src/backend/vision_guard_core/eye_gaze_time_tracker/: eye_gaze_time_tracker.cpp  eye_gaze_time_tracker.hpp
src/backend/vision_guard_core/eye_gaze_time_tracker/include/: eye_gaze_time_tracker.hpp
src/backend/vision_guard_core/eye_gaze_time_tracker/src/: eye_gaze_time_tracker.cpp
src/backend/vision_guard_core/gaze_detection_engine/: base_estimator.hpp  gaze_detection_engine.cpp  gaze_detection_engine.hpp  gaze_estimator.hpp  head_pose_estimator.cpp  results_marker.cpp  results_marker.hpp
src/backend/vision_guard_core/gaze_detection_engine/include/: base_estimator.hpp  eye_state_estimator.hpp  face_detector.hpp  face_inference_results.hpp  gaze_detection_engine.hpp  gaze_estimator.hpp  head_pose_estimator.hpp  ie_wrapper.hpp  landmarks_estimator.hpp  results_marker.hpp
src/backend/vision_guard_core/gaze_detection_engine/src/: eye_state_estimator.cpp  face_detector.cpp  face_inference_results.cpp  gaze_detection_engine.cpp  gaze_estimator.cpp  head_pose_estimator.cpp  ie_wrapper.cpp  landmarks_estimator.cpp  results_marker.cpp
src/backend/vision_guard_core/include/: vision_guard.hpp
src/backend/vision_guard_core/performance_tracker/: performance_tracker.cpp  performance_tracker.hpp
src/backend/vision_guard_core/performance_tracker/include/: performance_tracker.hpp
src/backend/vision_guard_core/performance_tracker/src/: performance_tracker.cpp
src/backend/vision_guard_core/screen_time_metric_logger/: screen_time_metric_logger.cpp  screen_time_metric_logger.hpp
src/backend/vision_guard_core/screen_time_metric_logger/include/: screen_time_metric_logger.hpp
src/backend/vision_guard_core/screen_time_metric_logger/src/: screen_time_metric_logger.cpp
src/backend/vision_guard_core/src/: eye_state_estimator.hpp  face_detector.hpp  face_inference_results.hpp  ie_wrapper.hpp  landmarks_estimator.hpp
src/backend/vision_guard_core/vector_calibration/: vector_calibration.cpp  vector_calibration.hpp
src/backend/vision_guard_core/vector_calibration/include/: vector_calibration.hpp
src/backend/vision_guard_core/vector_calibration/src/: vector_calibration.cpp
src/common/: CMakeLists.txt
src/gaze_estimation/include/: vision_guard.hpp
src/gaze_estimation/src/: eye_state_estimator.cpp
src/gaze_estimation_backend/gaze_estimation/cpp/: CMakeLists.txt  gaze_estimation_demo.hpp  main.cpp
src/gaze_estimation_backend/gaze_estimation/cpp/include/: constants.hpp  vision_guard.hpp
src/gaze_estimation_backend/gaze_estimation/cpp/src/: constants.cpp  face_detector.cpp  results_marker.cpp  vision_guard.cpp
wiki/: CD_GazeDetectionEngine.md  CD_VisionGuardCore.md
(+6 files in other folders)
